; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_find_transfer_task.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_find_transfer_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@seaf = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @seafile_find_transfer_task(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seaf, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @http_tx_manager_find_task(i32 %9, i8* %10)
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = call i64 @convert_http_task(i32* %15)
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %3, align 8
  br label %19

18:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %19

19:                                               ; preds = %18, %14
  %20 = load i32*, i32** %3, align 8
  ret i32* %20
}

declare dso_local i32* @http_tx_manager_find_task(i32, i8*) #1

declare dso_local i64 @convert_http_task(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
